# admet-honest-audit

./: .gitignore  FINDINGS_MULTI.md  HOW_WE_USED_CLAUDE.md  LEADERBOARD_COMPARISON.md  LEADERBOARD_PRIOR.md  Narrative.md  README.md  ROBUSTNESS.md  SOTA_PRIOR.md  SOTA_PRIOR_REG.md  VIDEO_SLIDES.md  VOICEOVER.md  architecture.html  architecture_flow.html  build_metric_map.py  claude.md  climb_cyp2d6.py  config.py  data_split.py  data_split_caco.py  data_split_sol.py  deck.html  diag_caco_gap.py  diagnose_cyp2d6.py  features.py  final_test_eval.py  final_test_eval_reg.py  final_test_eval_sol.py  harness.py  inspect_loader.py  iterate.py  iterate_reg.py  iterate_sol.py  leakage_control.py  leakage_synthetic_control.py  main.py  make_leaderboard_figure.py  model_utils.py  pyproject.toml  report_cyp2d6.py  (+8 more)
benchmarks/: _scaffold_split.py  base.py  tdc_admet.py  verify_stage1.py
figures/: robustness_trajectories.json
models/: caco_v01_morgan_lgbm.py  caco_v02_desc_lgbm.py  caco_v03_desc_morgan_lgbm_tuned.py  caco_v04_stacked_reg.py  caco_v05_late_fusion_reg.py  caco_v06_two_stage_residual.py  sol_v01_morgan_lgbm.py  sol_v02_desc_lgbm.py  sol_v03_desc_morgan_lgbm_tuned.py  sol_v04_stacked_reg.py  sol_v05_late_fusion_reg.py  sol_v06_two_stage_residual.py  sol_v07_morgan_r3_lgbm.py  sol_v08_maccs_lgbm.py  sol_v09_desc_morgan_r3_lgbm.py  sol_v10_desc_morgan1024_lgbm.py  sol_v11_desc_morgan_rf.py  sol_v12_desc_morgan_extratrees.py  sol_v13_desc_morgan_histgb.py  sol_v14_desc_ridge.py  sol_v15_desc_morgan_lgbm_deep.py  v01_desc_rf.py  v02_desc_lgbm.py  v03_desc_morgan_rf.py  (+12 more)
(+8 files in other folders)
