[project]
name = "hack-admet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.6.0",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "rdkit>=2023.9.6",
    "scikit-learn>=1.9.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
# PyTDC is ONLY needed to download endpoints not already cached under data/.
# The runtime pipeline reads cached CSVs + rdkit + lightgbm + sklearn/scipy and
# never imports tdc. Installing this extra pulls torch/numba/tiledbsoma; the core
# install does not. Cached data ships with the repo, so reproduction needs none.
download = ["pytdc==1.1.15", "setuptools<81"]
